tests/kulezi_tests/bad/dup_ident10.lat
class C {
   
}

class B extends C {
     int f(int x, int x) {}
}

int main() {
    return 0;
}